// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox field should render disabled input 1`] = `
<FieldTemplate
  description="my checkbox input hint"
  errorMessage="My error message"
  isValid={true}
>
  <SimpleCheckBox
    id="myForm"
    label="My checkbox title"
    onChange={[Function]}
    onFinish={[Function]}
    schema={
      Object {
        "autoFocus": true,
        "description": "my checkbox input hint",
        "disabled": true,
        "title": "My checkbox title",
        "type": "checkbox",
      }
    }
    value={true}
  />
</FieldTemplate>
`;

exports[`CheckBox field should render input 1`] = `
<FieldTemplate
  description="my checkbox input hint"
  errorMessage="My error message"
  isValid={true}
>
  <SimpleCheckBox
    id="myForm"
    label="My checkbox title"
    onChange={[Function]}
    onFinish={[Function]}
    schema={
      Object {
        "autoFocus": true,
        "description": "my checkbox input hint",
        "title": "My checkbox title",
        "type": "checkbox",
      }
    }
    value={true}
  />
</FieldTemplate>
`;
